06_rect/grade.txt
Grading at Wed May 20 14:31:21 UTC 2020
Attempting to compile rectangle.c
rectangle.c: In function ‘canonicalize’:
rectangle.c:28:15: error: unused variable ‘y_temp’ [-Werror=unused-variable]
   int x_temp, y_temp;
               ^
rectangle.c:28:7: error: variable ‘x_temp’ set but not used [-Werror=unused-but-set-variable]
   int x_temp, y_temp;
       ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
